feat: added cors configuration to cors security and extended token expiration time to one hour